==> RT-Thread/rt-thread/bsp/nuvoton/libraries/nuc980/rtt_port/drv_usbd.c <==
#include <rtconfig.h>
#include <rtthread.h>
#include <rtdevice.h>
#include <string.h>
#include "NuMicro.h"
#include <nu_bitutil.h>
#include "drv_sys.h"
#define LOG_TAG         "drv.usbd"
#define DBG_SECTION_NAME "drv.usbd"
#define DBG_COLOR
#include <rtdbg.h>
#define ENABLE_FULL_SPEED_MODE_ONLY 0 /* 0: default hi-speed mode; 1: full-speed mode only */
#define CEP_MAX_PKT_SIZE        64
#define CEP_OTHER_MAX_PKT_SIZE  64
#define EPA_MAX_PKT_SIZE        512
#define EPA_OTHER_MAX_PKT_SIZE  64
#define EPB_MAX_PKT_SIZE        512
#define EPB_OTHER_MAX_PKT_SIZE  64
#define EPC_MAX_PKT_SIZE        64
#define EPC_OTHER_MAX_PKT_SIZE  64
#define EPD_MAX_PKT_SIZE        64
#define EPD_OTHER_MAX_PKT_SIZE  64
#define EPE_MAX_PKT_SIZE        512
#define EPE_OTHER_MAX_PKT_SIZE  64
#define EPF_MAX_PKT_SIZE        512
#define EPF_OTHER_MAX_PKT_SIZE  64
#define EPG_MAX_PKT_SIZE        64
#define EPG_OTHER_MAX_PKT_SIZE  64
#define EPH_MAX_PKT_SIZE        64
#define EPH_OTHER_MAX_PKT_SIZE  64
#define EPI_MAX_PKT_SIZE        512
#define EPI_OTHER_MAX_PKT_SIZE  64
#define EPJ_MAX_PKT_SIZE        512
#define EPJ_OTHER_MAX_PKT_SIZE  64
#define EPK_MAX_PKT_SIZE        64
#define EPK_OTHER_MAX_PKT_SIZE  64
#define EPL_MAX_PKT_SIZE        64
#define EPL_OTHER_MAX_PKT_SIZE  64
#define CEP_BUF_BASE    0
#define CEP_BUF_LEN     CEP_MAX_PKT_SIZE
#define EPA_BUF_BASE    (CEP_BUF_BASE + CEP_BUF_LEN)
#define EPA_BUF_LEN     EPA_MAX_PKT_SIZE
#define EPB_BUF_BASE    (EPA_BUF_BASE + EPA_BUF_LEN)

static rt_err_t _ep_set_stall(rt_uint8_t address)
{

    if (address  & USB_EPNO_MASK)
    {
        USBD_SetEpStall(EPADR_SW2HW(address));
    }
    else
    {
        /* Not support. Reply STALL. */
        USBD_SET_CEP_STATE(USBD_CEPCTL_STALLEN_Msk);
        USBD_CLR_CEP_INT_FLAG(USBD_CEPINTSTS_SETUPPKIF_Msk);
        USBD_ENABLE_CEP_INT(USBD_CEPINTEN_SETUPPKIEN_Msk);
    }
    return RT_EOK;
}

static rt_err_t _ep_clear_stall(rt_uint8_t address)
{
    if (address  & USB_EPNO_MASK)
    {
        USBD_ClearEpStall(EPADR_SW2HW(address));
    }

    return RT_EOK;
}

static rt_err_t _set_address(rt_uint8_t address)
{
    if (0 != address)
    {
        nu_usbd.address_tmp = address;
    }

    return RT_EOK;
}

static rt_err_t _ep_enable(uep_t ep)
{
    RT_ASSERT(ep != RT_NULL);
    RT_ASSERT(ep->ep_desc != RT_NULL);

    USBD->EP[EPADR_SW2HW(ep->ep_desc->bEndpointAddress)].EPRSPCTL = USB_EP_RSPCTL_TOGGLE;
    USBD->EP[EPADR_SW2HW(ep->ep_desc->bEndpointAddress)].EPCFG |= USB_EP_CFG_VALID;

    return RT_EOK;
}

static rt_err_t _ep_disable(uep_t ep)
{
    RT_ASSERT(ep != RT_NULL);
    RT_ASSERT(ep->ep_desc != RT_NULL);
    USBD->EP[EPADR_SW2HW(ep->ep_desc->bEndpointAddress)].EPCFG &= ~USB_EP_CFG_VALID;

    return RT_EOK;
}

static rt_err_t _ep0_send_status(void)
{
    /* Status Stage */
    USBD_CLR_CEP_INT_FLAG(USBD_CEPINTSTS_STSDONEIF_Msk
                          | USBD_CEPINTSTS_SETUPPKIF_Msk);

    USBD_ENABLE_CEP_INT(USBD_CEPINTEN_STSDONEIEN_Msk);

    USBD_SET_CEP_STATE(USB_CEPCTL_NAKCLR);

    return RT_EOK;
}

static rt_ssize_t _ep_read_prepare(rt_uint8_t address, void *buffer, rt_size_t size)
{
    RT_ASSERT(!(address & USB_DIR_IN));

    if ((address & USB_EPNO_MASK))
    {
        USBD_ENABLE_EP_INT(EPADR_SW2HW(address),
                           USBD_EPINTEN_RXPKIEN_Msk);
    }
    else //control transfer
    {
        if (size)
        {
            RT_ASSERT(_rt_obj_udc.stage == STAGE_DOUT);
            USBD_ENABLE_CEP_INT(USBD_CEPINTEN_OUTTKIEN_Msk);
        }
        else
        {

            RT_ASSERT(_rt_obj_udc.stage == STAGE_STATUS_OUT);
            USBD_CLR_CEP_INT_FLAG(USBD_CEPINTSTS_SETUPPKIF_Msk
                                  | USBD_CEPINTSTS_STSDONEIF_Msk);
            USBD_ENABLE_CEP_INT(USBD_CEPINTEN_SETUPPKIEN_Msk
                                | USBD_CEPINTEN_STSDONEIEN_Msk);
            USBD_SET_CEP_STATE(USB_CEPCTL_NAKCLR);
        }

    }

    return size;
}

static rt_ssize_t _ep_write(rt_uint8_t address, void *buffer, rt_size_t size)
{

    RT_ASSERT((address & USB_DIR_IN));

    if (!(address & USB_EPNO_MASK)) //control transfer
    {
        if (size)
        {
            nu_buffer_cpy(address, buffer, size);
            USBD_START_CEP_IN(size);
        }
        else//zero length
        {
            USBD_SET_CEP_STATE(USB_CEPCTL_ZEROLEN);
            USBD_CLR_CEP_INT_FLAG(USBD_CEPINTSTS_STSDONEIF_Msk
                                  | USBD_CEPINTSTS_SETUPPKIF_Msk);

            USBD_ENABLE_CEP_INT(USBD_CEPINTEN_SETUPPKIEN_Msk
                                | USBD_CEPINTEN_STSDONEIEN_Msk);
        }

        if (_rt_obj_udc.stage == STAGE_DIN)
        {
            USBD_CLR_CEP_INT_FLAG(USBD_CEPINTSTS_TXPKIF_Msk);
            USBD_ENABLE_CEP_INT(USBD_CEPINTEN_TXPKIEN_Msk);
        }
        else if (_rt_obj_udc.stage == STAGE_DOUT)
        {
            USBD_CLR_CEP_INT_FLAG(USBD_CEPINTSTS_RXPKIF_Msk);
            USBD_ENABLE_CEP_INT(USBD_CEPINTEN_RXPKIEN_Msk);
        }
    }
    else
    {
        /* Non-control endpoint IN*/
        nu_buffer_cpy(address, buffer, size);
        USBD->EP[EPADR_SW2HW(address)].EPRSPCTL = USB_EP_RSPCTL_SHORTTXEN; // packet end
        USBD->EP[EPADR_SW2HW(address)].EPTXCNT = size;

        if ((USBD->EP[EPADR_SW2HW(address)].EPCFG & USBD_EPCFG_EPTYPE_Msk) == USB_EP_CFG_TYPE_INT)
        {
            USBD_ENABLE_EP_INT(EPADR_SW2HW(address), USBD_EPINTEN_INTKIEN_Msk);  //for interrupt transfer timing
        }
        else
        {
            USBD_ENABLE_EP_INT(EPADR_SW2HW(address), USBD_EPINTEN_TXPKIEN_Msk);  //for bulk transfer  timing
        }
    }

    return size;
}

static rt_err_t _init(rt_device_t device)
{
    nu_sys_ipclk_enable(nu_usbd.clkidx);

    nu_sys_ip_reset(nu_usbd.rstidx);

    rt_hw_us_delay(1000);

    /* USBD Open */
    USBD_ENABLE_USB();

    while (1)
    {
        USBD->EP[EPA].EPMPS = 0x20ul;
        if (USBD->EP[EPA].EPMPS == 0x20ul)
        {
            break;
        }
    }

    /* Force SE0 */
    USBD_SET_SE0();

    _nu_ep_partition();

#if ENABLE_FULL_SPEED_MODE_ONLY
    USBD->OPER &= ~USBD_OPER_HISPDEN_Msk;
#else
    USBD->OPER |= USBD_OPER_HISPDEN_Msk;
#endif

    /* Install USBD interrupt */
    rt_hw_interrupt_install(nu_usbd.irqn, nu_usbd_isr, &nu_usbd, nu_usbd.name);
    rt_hw_interrupt_set_priority(nu_usbd.irqn, IRQ_LEVEL_1);

    /* Enable USBD interrupt */
    rt_hw_interrupt_umask(nu_usbd.irqn);

    /* Start transaction */
    USBD_CLR_SE0();

    /* Get currect cable status */
    nu_usbd.plugging_status = USBD_IS_ATTACHED() >> USBD_PHYCTL_VBUSDET_Pos;

    return RT_EOK;
}
